# Flask_Application_Tutorial

./: .gitignore  Licence.txt  README.rst  pyproject.toml  userdata.db
flask_application_tutorial/: __init__.py  about.py  app.py  articles.py  auth.py  data.py  db.py  forms.py  home.py  my_dashboard.py  schema.sql  userdatabase.py
flask_application_tutorial.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flask_application_tutorial/templates/: about.html  article.html  articles.html  dashboard.html  home.html  layout.html  register.html
flask_application_tutorial/templates/articles/: article.html  articles.html
flask_application_tutorial/templates/auth/: login.html
flask_application_tutorial/templates/includes/: _formhelpers.html  _navbar.html
flask_application_tutorial/templates/my_dashboard/: add_article.html  dashboard.html  edit_article.html
tests/: test_flask_application_tutorial.py
