[tool.poetry]
name = "Flask_Application_Tutorial"
version = "0.1.0"
description = "A simple Flask project from youtube channel 'Traversy Media', called 'Python Flask From Scratch'"
authors = ["Dragos Manea <maneadr@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
