[tool.poetry]
name = "Flask_Application_Tutorial"
version = "0.1.0"
description = "A simple Flask project from youtube channel 'Traversy Media', called 'Python Flask From Scratch'"
authors = ["Dragos Manea <maneadr@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
D = "^0.2.2"
docutils = "^0.16"
FLASK-WTF = "^0.14.3"
passlib = "^1.7.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
